# fara

./: README.md
webeval/: pyproject.toml
webeval/scripts/: verify_trajectories.py
webeval/src/webeval/oai_clients/: graceful_client.py
webeval/src/webeval/rubric_agent/: __init__.py  _cp_schema.py  _yaml_utils.py  base.py  critical_point_classifier.py  critical_point_types.yaml  data_point.py  error_taxonomy_analysis.md  error_taxonomy_loader.py  formatting.py  llm_helpers.py  mm_rubric_agent.py  prompts.py  task_classification.py  utils.py  verifier_agent.py
webeval/src/webeval/rubric_agent/templates/: cp_classifier_system.j2  cp_classifier_user.j2
webeval/tests/: test_oai_clients.py  test_verify_trajectories.py
